envoy/envoy.yaml
admin:
  access_log_path: /tmp/admin_access.log
  address:
    socket_address: { address: 0.0.0.0, port_value: 9901 }

static_resources:
  listeners:
    - name: listener_0
      address:
        socket_address: { address: 0.0.0.0, port_value: 8080 }
      filter_chains:
        - filters:
            - name: envoy.http_connection_manager
              config:
                stream_idle_timeout: 0s
                codec_type: auto
                stat_prefix: ingress_http
                route_config:
                  name: local_route
                  virtual_hosts:
                    - name: local_service
                      domains: ["example.com"]
                      routes:
                        - match: { prefix: "/" }
                          route:
                            cluster: s1
                            prefix_rewrite: "/"
                            max_grpc_timeout: 0s
#                      cors:
#                        allow_origin:
#                        - "*"
#                        allow_methods: GET, PUT, DELETE, POST, OPTIONS
#                        allow_headers: keep-alive,user-agent,cache-control,content-type,content-transfer-encoding,custom-header-1,x-accept-content-transfer-encoding,x-accept-response-streaming,x-user-agent,x-grpc-web,grpc-timeout
#                        max_age: "1728000"
#                        expose_headers: custom-header-1,grpc-status,grpc-message
#                        filter_enabled:
#                          default_value:
#                            numerator: 100
#                            denominator: HUNDRED
#                          runtime_key: cors.www.enabled
                http_filters:
                  - name: envoy.grpc_web
#                  - name: envoy.cors
                  - name: envoy.router
          tls_context:
            common_tls_context:
              alpn_protocols: "h2"
              tls_certificates:
                - certificate_chain:
                    filename: "/etc/server.crt"
                  private_key:
                    filename: "/etc/server.key"
  clusters:
    - name: s1
      connect_timeout: 15s
      type: logical_dns
      http2_protocol_options: {}
      lb_policy: round_robin
      hosts: [{ socket_address: { address: host.docker.internal, port_value: 9090 }}]
